--- a/src/app/plats/ajouter/ajouter.page.html
+++ b/src/app/plats/ajouter/ajouter.page.html
@@ -15,6 +15,9 @@
     <ion-item>
       <ion-label>Description : </ion-label><ion-input name = "description" [formControl]="description"></ion-input>
     </ion-item>
+    <ion-item>
+      <ion-label>Photo : </ion-label><ion-input type="file" name = "description" [formControl]="platImg"></ion-input>
+    </ion-item>
     <ion-button expand="block" type="submit" [disabled]="nom.hasError('required') || prix.hasError('required') || description.hasError('required')">Ajouter</ion-button>
   </form>
 </ion-content>
