--- a/src/app/plats/ajouter/ajouter.page.html
+++ b/src/app/plats/ajouter/ajouter.page.html
@@ -1,6 +1,8 @@
 <ion-header>
   <ion-toolbar color="success">
-    <ion-button slot="start" (click)="back()"><ion-icon name="arrow-back"></ion-icon></ion-button>
+    <ion-buttons slot="start">
+      <ion-back-button></ion-back-button>
+    </ion-buttons>
     <ion-title>Ajouter un plat</ion-title>
   </ion-toolbar>
 </ion-header>
