--- a/src/app/plats/plats.page.html
+++ b/src/app/plats/plats.page.html
@@ -3,6 +3,10 @@
     <ion-buttons slot="start">
       <ion-menu-button></ion-menu-button>
     </ion-buttons>
+    <ion-buttons slot="end">
+      <ion-icon slot="end" name="cart"></ion-icon>
+      <ion-text style="margin-left: 10px; margin-right: 10px;">1</ion-text>
+    </ion-buttons>
     <ion-title>
       Plats
     </ion-title>
