--- a/src/app/usermanager/login/login.page.html
+++ b/src/app/usermanager/login/login.page.html
@@ -21,6 +21,7 @@
         <ion-input type="password" name="password" [formControl]="password"></ion-input>
       </ion-item>
     </ion-list>
+    <ion-text><a (click)="resetAccount()">Mot de passe oublié ?</a></ion-text>
     <ion-button type="submit" expand="block" [disabled]=" identifier.hasError('required') || identifier.invalid  || password.hasError('required')">Se connecter</ion-button>
   </form>
 </ion-content>
