--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -17,21 +17,25 @@
               <ion-label>{{ p.title }}</ion-label>
             </ion-item>
           </ion-menu-toggle>
+        </ion-list>
+        <ion-list>
           <ion-menu-toggle auto-hide="false">
-            <ion-item (click)="onDeconnecte()" lines="none" routerLink="/home">
+            <ion-list *ngIf="!isAuthenticated()" >
+              <ion-item lines="none" routerLink="/create-account">
+                <ion-icon slot="start" ios="create-outline" md="create-sharp"></ion-icon>
+                <ion-label>Créer mon compte</ion-label>
+              </ion-item>
+              <ion-item lines="none" routerLink="/login" *ngIf="!isAuthenticated()" (click)="connected()">
+                <ion-icon slot="start" ios="log-in-outline" md="log-in-sharp"></ion-icon>
+                <ion-label>Se connecter</ion-label>
+              </ion-item>
+            </ion-list>
+            <ion-item (click)="onDeconnecte()" lines="none" routerLink="/home" *ngIf="isAuthenticated()">
               <ion-icon slot="start" ios="log-out-outline" md="log-out-sharp"></ion-icon>
               <ion-label>Se Déconnecter</ion-label>
             </ion-item>
-          </ion-menu-toggle>
-        </ion-list>
-
-        <ion-list id="labels-list">
-          <ion-list-header>Labels</ion-list-header>
-          <ion-item *ngFor="let label of labels" lines="none">
-            <ion-icon slot="start" ios="bookmark-outline" md="bookmark-sharp"></ion-icon>
-            <ion-label>{{ label }}</ion-label>
-          </ion-item>
-        </ion-list>
+           </ion-menu-toggle>
+          </ion-list>
       </ion-content>
     </ion-menu>
     <ion-router-outlet id="main-content"></ion-router-outlet>
