--- a/src/app/menu/menu.page.html
+++ b/src/app/menu/menu.page.html
@@ -3,7 +3,7 @@
     <ion-buttons slot="start">
       <ion-menu-button></ion-menu-button>
     </ion-buttons>
-    <ion-buttons slot="end">
+    <ion-buttons slot="end" routerLink="/plats/commande">
       <ion-icon slot="end" name="cart"></ion-icon>
       <ion-text style="margin-left: 10px; margin-right: 10px;">{{totalCommand}}</ion-text>
     </ion-buttons>
