--- a/src/global.scss
+++ b/src/global.scss
@@ -28,3 +28,6 @@
 * {
     font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
 }
+body {
+    background-color: wheat;
+}
