--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -19,10 +19,10 @@
   </ion-card>
 
   <ion-card class="welcome-card">
-    <img src="/assets/thiep2.jpg" alt=""/>
+    <img src="/assets/ragout.jpg" alt=""/>
     <ion-card-header>
-      <ion-card-subtitle>Riz au poisson blanc</ion-card-subtitle>
-      <ion-card-title class="ionic-align-center">Thieboudieune bou wekh</ion-card-title>
+      <ion-card-subtitle>Sauche au viande de mouton</ion-card-subtitle>
+      <ion-card-title class="ionic-align-center">Sauche au viande accompagné de moutarde</ion-card-title>
     </ion-card-header>
     <ion-card-content>
     </ion-card-content>
