--- a/src/app/plats/plats.page.html
+++ b/src/app/plats/plats.page.html
@@ -4,7 +4,7 @@
       <ion-menu-button></ion-menu-button>
     </ion-buttons>
     <ion-title>
-      Plats
+      Nos plats
     </ion-title>
   </ion-toolbar>
 </ion-header>
@@ -15,12 +15,13 @@
       <ion-icon name="add"></ion-icon>
     </ion-fab-button>
   </ion-fab>
-  <ion-list *ngFor="let plat of plats">
+  <ion-list *ngFor="let plat of plats; let i = index">
     <ion-card>
       <ion-card-content>
-        <ion-item lines="none" (click)="details(plat.id)">
-          <ion-label>{{plat.nom}}</ion-label>
-          <ion-label>{{plat.prix | currency: 'FCFA': 'symbol': '0.0-1': 'fr'}}</ion-label>
+        <img height="200" width="390" [src]="url+plat.url" (click)="details(plat.id)">
+        <ion-item lines="none">
+          <ion-label style="font-weight: bold">{{plat.nom}}</ion-label>
+          <ion-label style="font-weight: bold">{{plat.prix | currency: 'FCFA': 'symbol': '0.0-1': 'fr'}}</ion-label>
           <ion-icon class="marge-right" color="danger" name="trash" (click)="deletePlat(plat.id)" *ngIf="isAdmin()"></ion-icon>
           <ion-icon name="create" (click)="update(plat.id)" *ngIf="isAdmin()"></ion-icon>
         </ion-item>
