--- a/src/app/menu/menu.page.html
+++ b/src/app/menu/menu.page.html
@@ -19,7 +19,7 @@
         <ion-label style="font-weight: bold">{{menu.plat.nom}}</ion-label>
         <ion-label style="font-weight: bold">{{menu.plat.prix | currency: 'FCFA': 'symbol': '0.0-1': 'fr'}}</ion-label>
         <ion-icon name="cart-outline" (click)="commander(menu.plat.id)"></ion-icon>
-        <ion-icon style="margin-left: 10px;" color="danger" name="trash" (click)="deletePlat(menu.id)"></ion-icon>
+        <ion-icon style="margin-left: 10px;" color="danger" name="trash" *ngIf="isAdmin()" (click)="deletePlat(menu.id)"></ion-icon>
       </ion-item>
     </ion-card-content>
   </ion-card>
