--- a/src/app/plats/commande/commande.page.html
+++ b/src/app/plats/commande/commande.page.html
@@ -3,7 +3,7 @@
     <ion-buttons slot="start">
       <ion-menu-button></ion-menu-button>
     </ion-buttons>
-    <ion-title>Liste des commandes</ion-title>
+    <ion-title>{{title}}</ion-title>
   </ion-toolbar>
 </ion-header>
 <ion-content>
